crates/sui-graphql-macros/tests/compile/type_validation_elements_nullable_without_option.rs
use sui_graphql_macros::Response;

#[derive(Response)]
struct R {
    #[field(path = "checkpoints.nodes[]?.digest")]
    digests: Vec<String>,
}

fn main() {}
